--- a/app/src/main/res/layout/userinfo.xml
+++ b/app/src/main/res/layout/userinfo.xml
@@ -16,7 +16,6 @@
             android:id="@id/user_icon"
             android:layout_width="@dimen/common_80dp"
             android:layout_height="@dimen/common_80dp"
-            android:src="@drawable/usericon"
             />
 
         <LinearLayout
@@ -33,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/darkslategrey"
-                android:text="@string/name">
+                android:text="Admin">
             </TextView>
 
             <LinearLayout
