--- a/app/src/main/res/drawable/tab_unselected.xml
+++ b/app/src/main/res/drawable/tab_unselected.xml
@@ -7,7 +7,7 @@
         <shape android:shape="rectangle" >
             <gradient
                 android:angle="-90"
-                android:endColor="@color/tabDark"
+                android:endColor="@color/snow"
                 android:startColor="@color/tabMedium" />
         </shape>
     </item>
