--- a/app/src/main/res/layout/bluetoothinfo.xml
+++ b/app/src/main/res/layout/bluetoothinfo.xml
@@ -6,84 +6,156 @@
     android:background="@color/whitesmoke"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="@dimen/common_50dp"
-        android:background="@color/wl_black">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical|center_horizontal"
-            android:textColor="@color/snow"
-            android:text="信号"
-            android:textSize="20sp"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_marginTop="@dimen/common_10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@id/dev"
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/wl_gray"
-            android:textSize="12sp"
-            android:text="Developed by:"/>
-
-        <TextView
-            android:layout_below="@id/dev"
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/wl_gray"
-            android:textSize="20sp"
-            android:text="Inside Location"/>
-
-    </RelativeLayout>
-
-    <ImageView
-        android:id="@id/bl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/bl"/>
-
-    <com.gc.materialdesign.views.Switch
-        android:id="@id/switchView"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#1E88E5"
-        materialdesign:check="true" />
-
-    <com.gc.materialdesign.views.ButtonRectangle
-        android:id="@id/btninfo"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/common_10dp"
-        android:layout_width="@dimen/common_200dp"
-        android:layout_height="wrap_content"
-        android:background="#1E88E5"
-        android:text="查看蓝牙信号信息" />
-
-    <com.gc.materialdesign.views.ButtonRectangle
-        android:id="@id/btndev"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/common_10dp"
-        android:layout_width="@dimen/common_200dp"
-        android:layout_height="wrap_content"
-        android:background="#1E88E5"
-        android:text="更多蓝牙设备" />
-
-    <ListView
-        android:id="@id/lv"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/common_10dp"
+    <ViewFlipper
+        android:id="@id/bluetoothflipper"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-    </ListView>
+        <LinearLayout
+            android:id="@id/blueinfolayout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@color/whitesmoke"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/common_50dp"
+                android:background="@color/wl_black">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:textColor="@color/snow"
+                    android:text="信号"
+                    android:textSize="20sp"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_marginTop="@dimen/common_10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@id/dev"
+                    android:layout_centerHorizontal="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/wl_gray"
+                    android:textSize="12sp"
+                    android:text="Developed by:"/>
+
+                <TextView
+                    android:layout_below="@id/dev"
+                    android:layout_centerHorizontal="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/wl_gray"
+                    android:textSize="20sp"
+                    android:text="Inside Location"/>
+
+            </RelativeLayout>
+
+            <ImageView
+                android:id="@id/bl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/bl"/>
+
+            <com.gc.materialdesign.views.Switch
+                android:id="@id/switchView"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#1E88E5"
+                materialdesign:check="true" />
+
+            <com.gc.materialdesign.views.ButtonRectangle
+                android:id="@id/btninfo"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/common_10dp"
+                android:layout_width="@dimen/common_200dp"
+                android:layout_height="wrap_content"
+                android:background="#1E88E5"
+                android:text="查看蓝牙信号信息" />
+
+            <com.gc.materialdesign.views.ButtonRectangle
+                android:id="@id/btndev"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/common_10dp"
+                android:layout_width="@dimen/common_200dp"
+                android:layout_height="wrap_content"
+                android:background="#1E88E5"
+                android:text="更多蓝牙设备" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@id/signallayout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@color/whitesmoke"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/common_50dp"
+                android:background="@color/wl_black">
+
+                <LinearLayout
+                    android:id="@id/toblue"
+                    android:layout_width="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_height="@dimen/common_20dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/common_20dp"
+                        android:layout_height="@dimen/common_20dp"
+                        android:layout_marginLeft="@dimen/common_10dp"
+                        android:background="@drawable/toleft"/>
+
+                    <TextView
+                        android:layout_width="@dimen/common_40dp"
+                        android:layout_height="@dimen/common_20dp"
+                        android:layout_centerVertical="true"
+                        android:text="信号"
+                        android:textColor="@color/snow"/>
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:textColor="@color/snow"
+                    android:text="信号详细"
+                    android:textSize="22sp"/>
+
+            </RelativeLayout>
+
+            <FrameLayout
+                android:id="@id/signalframelayout"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+            </FrameLayout>
+
+        </LinearLayout>
+
+    </ViewFlipper>
+
+
+
+    <!--<ListView-->
+        <!--android:id="@id/lv"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:layout_marginTop="@dimen/common_10dp"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent">-->
+
+    <!--</ListView>-->
 
 </LinearLayout>
