--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,44 +2,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/device_name"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:text="name"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="32sp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/device_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:text="name"
+            android:textColor="@color/wl_black"
+            android:textSize="20sp"
+            android:gravity="center_vertical"/>
+
+        <TextView
+            android:id="@+id/device_beacon_uuid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:text="address"
+            android:textColor="@color/wl_black"
+            android:textSize="20sp"
+            android:gravity="center_vertical"/>
+
+        </LinearLayout>
+
+
+
+    <!--<TextView-->
+        <!--android:id="@+id/device_beacon_uuid"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:paddingLeft="10dp"-->
+        <!--android:text="uuid"-->
+        <!--android:textSize="15dp" />-->
 
     <TextView
-        android:id="@+id/device_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:text="address"
-        android:textSize="15dp" />
-
-    <TextView
-        android:id="@+id/device_beacon_uuid"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:text="uuid"
-        android:textSize="15dp" />
-
-    <TextView
-        android:id="@+id/device_major_minor"
+        android:id="@+id/device_major_minor_rssi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:text="major_minor"
-        android:textSize="15dp" />
+        android:textSize="15dp"
+        android:gravity="center_vertical"
+        android:layout_marginBottom="@dimen/common_10dp"/>
 
-    <TextView
-        android:id="@+id/device_txPower_rssi"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:text="txPower_rssi"
-        android:textSize="30dp" />
 </LinearLayout>
